Renamed filter-expenses-form CSS class to find-expenses-form; Fixed autocomplete input field shift when typing

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -60,6 +60,11 @@ html, body
                     margin-right: 0
                     margin-left: 0
 
+            .auto-complete-field
+                input
+                    margin-right: 0
+                    margin-left: 0
+
             select
                 option
                     &[disabled]
